added basic css, index enhanced

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,12 @@
 html
   head
     title Images
+    block styles
+      link(rel="stylesheet" type="text/css" href="/css/style.css")
   body
     h1 List of images
     
-    each image, index in images
-      p #{image}
+    ul
+      each image, index in images
+        li #{image}
 
