--- a/views/health.pug
+++ b/views/health.pug
@@ -5,5 +5,6 @@ html
       link(rel="stylesheet" type="text/css" href="/css/style.css")
   body
     h1 Health
+    p imagesCount: #{imagesCount}
     p retryImageCount: #{retryImageCount}
     p reportCount: #{reportCount}
